--- a/www/doc.html
+++ b/www/doc.html
@@ -50,7 +50,7 @@
         <th>Role</th>
     </tr>
     <tr>
-        <td>tomas@gmail.com</td>
+        <td>tomas@lapsansky.phpcode.eu</td>
         <td>12345</td>
         <td>Administrátor</td>
     </tr>
@@ -78,7 +78,7 @@
 <h2>In¹talácia</h2>
 <ul>
     <li>Po exportovaní aplikácie na server je potrebné spusti» composer update</li>
-    <li>Systém vy¾aduje verziu PHP 5.6 a vy¹¹iu, keï¾e vyu¾íva Nette 2.4</li>
+    <li>Systém vy¾aduje verziu PHP 7.1 a vy¹¹iu, keï¾e vyu¾íva Nette 2.4 a ¹peciálne PHP kon¹trukcie</li>
     <li>V hlavnom adresári sú umiestnené .sql scripty pre inicializáciu databáze a taktie¾ pre naplnenie testovacími
         dátami
     </li>
