debug off + doc edit

--- a/www/doc.html
+++ b/www/doc.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-2"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <title>Projekt IIS</title>
     <style type="text/css">
         table {
@@ -23,26 +23,26 @@
 </head>
 <body>
 
-<!-- Zkontrolujte prosím nastavení kódování v hlavičce dokumentu 
-     podle použitého editoru -->
+<!-- Zkontrolujte prosĂ­m nastavenĂ­ kĂłdovĂĄnĂ­ v hlaviÄce dokumentu 
+     podle pouĹžitĂŠho editoru -->
 
-<h1>Online lekáreň</h1> <!-- Nahradte názvem svého zadání -->
+<h1>Online lekĂĄreĹ</h1> <!-- Nahradte nĂĄzvem svĂŠho zadĂĄnĂ­ -->
 
 <dl>
     <dt>Autori</dt>
-    <dd>Tomáš Lapšanský <!-- Nahraďte skutečným jménem a e-mailem autora a popisem činnosti -->
+    <dd>TomĂĄĹĄ LapĹĄanskĂ˝ <!-- NahraÄte skuteÄnĂ˝m jmĂŠnem a e-mailem autora a popisem Äinnosti -->
         <a href="mailto:xlapsa00@stud.fit.vutbr.cz">xlapsa00@stud.fit.vutbr.cz</a> -
-        Návrh a vytvorenie backendu a databáze
+        NĂĄvrh a vytvorenie backendu a databĂĄze
     </dd>
-    <dd>Filip Pleško <!-- Nahraďte skutečným jménem a e-mailem autora a popisem činnosti -->
+    <dd>Filip PleĹĄko <!-- NahraÄte skuteÄnĂ˝m jmĂŠnem a e-mailem autora a popisem Äinnosti -->
         <a href="mailto:xplesk02@stud.fit.vutbr.cz">xplesk02@stud.fit.vutbr.cz</a> -
         Frontend
     </dd>
     <dt>URL aplikace</dt>
-    <dd><a href="http://www.stud.fit.vutbr.cz/~xlapsa00/IIS">http://www.stud.fit.vutbr.cz/~xlapsa00/IIS</a></dd>
+    <dd><a href="http://lapsansky.phpcode.eu/">http://lapsansky.phpcode.eu/</a></dd>
 </dl>
 
-<h2>Uživatelia systému pre testovanie</h2>
+<h2>UĹživatelia systĂŠmu pre testovanie</h2>
 <table>
     <tr>
         <th>Login</th>
@@ -52,43 +52,43 @@
     <tr>
         <td>tomas@lapsansky.phpcode.eu</td>
         <td>12345</td>
-        <td>Administrátor</td>
+        <td>AdministrĂĄtor</td>
     </tr>
     <tr>
         <td>juro@gmail.com</td>
         <td>12345</td>
-        <td>Zákazník</td>
+        <td>ZĂĄkaznĂ­k</td>
     </tr>
 </table>
 
-<h2>Implementácia</h2>
-<p>Naša implementácia vychádza z návrhu informačného systému pre sieť lekární. Rozhodli sme sa ale návrh jemne pozmeniť.
-    Zadanie totižto nebolo ani pre jedného člena tímu zadaním aj na predmete IDS alebo IUS, takže bolo potrebné od
-    základu vytvoriť taktiež návrh databáze pre projekt. Projekt lekárne nám prišiel veľmi komplexný a preto sme sa
-    rozhodli implementovať iba takzvanú online lekáreň, čo v praxi znamená, že pre nás nie je potrebné držať údaje o
-    rozmiestnení produktov medzi jednotlivými pobočkami, ale iba na jednom centrálnom sklade.</p>
-<p>Ako vhodný implementačný framework sme sa rozhodli použiť Nette, keďže sa jedná o framework ktorý je v ČR veľmi
-    rožšírený. Taktiež sa s ním výborne pracuje vďaka debugovaciemu rozhraniu Tracy a množstvu ďalších vylepšení ktoré
-    sme použili.</p>
-<p>Aplikácia je rozdelená na dve hlavné časti a tou je administrácia a frontend, ktorý je dostupný pre užívateľa. V
-    administrácií má administrátor plnú moc nad produktami, zákazníkmi, objednávkami a tak ďalej. Užívateľ samozrejme
-    objednáva produkti klasickou formou nákupného košíka. Keďže sa jedná o obchod so zameraním na lieky, užívateľ musí
-    byť prihlásený. Samozrejmosťou sú taktiež PDF faktúry, externý dodávatelia atď.</p>
+<h2>ImplementĂĄcia</h2>
+<p>NaĹĄa implementĂĄcia vychĂĄdza z nĂĄvrhu informaÄnĂŠho systĂŠmu pre sieĹĽ lekĂĄrnĂ­. Rozhodli sme sa ale nĂĄvrh jemne pozmeniĹĽ.
+    Zadanie totiĹžto nebolo ani pre jednĂŠho Älena tĂ­mu zadanĂ­m aj na predmete IDS alebo IUS, takĹže bolo potrebnĂŠ od
+    zĂĄkladu vytvoriĹĽ taktieĹž nĂĄvrh databĂĄze pre projekt. Projekt lekĂĄrne nĂĄm priĹĄiel veÄžmi komplexnĂ˝ a preto sme sa
+    rozhodli implementovaĹĽ iba takzvanĂş online lekĂĄreĹ, Äo v praxi znamenĂĄ, Ĺže pre nĂĄs nie je potrebnĂŠ drĹžaĹĽ Ăşdaje o
+    rozmiestnenĂ­ produktov medzi jednotlivĂ˝mi poboÄkami, ale iba na jednom centrĂĄlnom sklade.</p>
+<p>Ako vhodnĂ˝ implementaÄnĂ˝ framework sme sa rozhodli pouĹžiĹĽ Nette, keÄĹže sa jednĂĄ o framework ktorĂ˝ je v ÄR veÄžmi
+    roĹžĹĄĂ­renĂ˝. TaktieĹž sa s nĂ­m vĂ˝borne pracuje vÄaka debugovaciemu rozhraniu Tracy a mnoĹžstvu ÄalĹĄĂ­ch vylepĹĄenĂ­ ktorĂŠ
+    sme pouĹžili.</p>
+<p>AplikĂĄcia je rozdelenĂĄ na dve hlavnĂŠ Äasti a tou je administrĂĄcia a frontend, ktorĂ˝ je dostupnĂ˝ pre uĹžĂ­vateÄža. V
+    administrĂĄciĂ­ mĂĄ administrĂĄtor plnĂş moc nad produktami, zĂĄkaznĂ­kmi, objednĂĄvkami a tak Äalej. UĹžĂ­vateÄž samozrejme
+    objednĂĄva produkti klasickou formou nĂĄkupnĂŠho koĹĄĂ­ka. KeÄĹže sa jednĂĄ o obchod so zameranĂ­m na lieky, uĹžĂ­vateÄž musĂ­
+    byĹĽ prihlĂĄsenĂ˝. SamozrejmosĹĽou sĂş taktieĹž PDF faktĂşry, externĂ˝ dodĂĄvatelia atÄ.</p>
 
-<h2>Inštalácia</h2>
+<h2>InĹĄtalĂĄcia</h2>
 <ul>
-    <li>Po exportovaní aplikácie na server je potrebné spustiť composer update</li>
-    <li>Systém vyžaduje verziu PHP 7.1 a vyššiu, keďže využíva Nette 2.4 a špeciálne PHP konštrukcie</li>
-    <li>V hlavnom adresári sú umiestnené .sql scripty pre inicializáciu databáze a taktiež pre naplnenie testovacími
-        dátami
+    <li>Po exportovanĂ­ aplikĂĄcie na server je potrebnĂŠ spustiĹĽ composer update</li>
+    <li>SystĂŠm vyĹžaduje verziu PHP 7.1 a vyĹĄĹĄiu, keÄĹže vyuĹžĂ­va Nette 2.4 a ĹĄpeciĂĄlne PHP konĹĄtrukcie</li>
+    <li>V hlavnom adresĂĄri sĂş umiestnenĂŠ .sql scripty pre inicializĂĄciu databĂĄze a taktieĹž pre naplnenie testovacĂ­mi
+        dĂĄtami
     </li>
-    <li>V zložke <b>/app/config/config.neon</b> je potrebné nastaviť prístupové údaje na databázový server</li>
+    <li>V zloĹžke <b>/app/config/config.neon</b> je potrebnĂŠ nastaviĹĽ prĂ­stupovĂŠ Ăşdaje na databĂĄzovĂ˝ server</li>
 </ul>
 
-<h2>Známé problémy</h2>
-<p>V návrhu systému je na backende vytvorená predpríprava pre zobrazovanie cien liekov, ktoré sú do istej miery
-    preplácané rôznymi poisťovňami, nie je však aplikovaný priamo v systéme pre užívateľa. Nepovažovali by sme to však
-    za problém, skôr možnosť rozšírenia do budúcna.</p>
+<h2>ZnĂĄmĂŠ problĂŠmy</h2>
+<p>V nĂĄvrhu systĂŠmu je na backende vytvorenĂĄ predprĂ­prava pre zobrazovanie cien liekov, ktorĂŠ sĂş do istej miery
+    preplĂĄcanĂŠ rĂ´znymi poisĹĽovĹami, nie je vĹĄak aplikovanĂ˝ priamo v systĂŠme pre uĹžĂ­vateÄža. NepovaĹžovali by sme to vĹĄak
+    za problĂŠm, skĂ´r moĹžnosĹĽ rozĹĄĂ­renia do budĂşcna.</p>
 
 </body>
 </html>
